@@ -148,4 +148,5 @@
 - Proper AmigaDOS return values.
 - Non naked options allowed (IconDeluxe).
 - Default @app-name set to 'Test App' (mimic CBM Installer).
+- Fixed (abort) button.
 - ?
